--- a/style.css
+++ b/style.css
@@ -6,3 +6,13 @@ body {
   background-color: #f2f2f2;
   font-family: "Helvetica", sans-serif;
 }
+
+.container {
+  background-color: #fff;
+  max-width: 600px;
+  margin: 100px auto;
+  padding: 20px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  border-radius: 10px;
+  
+}
