--- a/style.css
+++ b/style.css
@@ -14,5 +14,9 @@ body {
   padding: 20px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
   border-radius: 10px;
-  
+}
+
+h1 {
+  margin-top: 0;
+  text-align: center;
 }
