--- a/style.css
+++ b/style.css
@@ -20,3 +20,11 @@ h1 {
   margin-top: 0;
   text-align: center;
 }
+
+input {
+  padding: 10px;
+  border: solid 1px #ccc;
+  border-radius: 4px;
+  margin: 10px 0;
+  width: 100%;
+}
