--- a/style.css
+++ b/style.css
@@ -39,10 +39,16 @@ button {
   width: 100%;
   font-size: 18px;
   text-transform: uppercase;
-  transition: background-color .2s ease;
+  transition: background-color 0.2s ease;
 }
 
 button:hover,
 button:focus {
   background-color: #45a049;
+}
+
+#total {
+  font-size: 24px;
+  font-weight: 900;
+  margin-top: 10px;
 }
